--- a/posts/index.org
+++ b/posts/index.org
@@ -1,6 +1,6 @@
-#+TITLE: 
+#+TITLE: Noob Notes
 #+AUTHOR:
-#+OPTIONS: author:nil toc:nil num:nil
+#+OPTIONS: author:nil toc:nil num:nil h:0
 
 - [[file:2024-10-02-babylon.org][What is Babylon?]]
 - [[file:2024-06-30-syntax-highlighting-test.org][Syntax Highlighting Test]]
