--- a/posts/2024-01-29-getting-started-with-emacs.org
+++ b/posts/2024-01-29-getting-started-with-emacs.org
@@ -5,6 +5,7 @@
 #+KEYWORDS: emacs, editor, programming, productivity
 #+FILETAGS: :emacs:tutorial:productivity:
 #+LASTMOD: <2025-06-30 Mon>
+#+DRAFT: false
 #+OPTIONS: toc:t num:nil
 
 * Introduction
